; ModuleID = '/home/carl/AnghaBench/disque/src/extr_debug.c__serverPanic.c'
source_filename = "/home/carl/AnghaBench/disque/src/extr_debug.c__serverPanic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LL_WARNING = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [49 x i8] c"------------------------------------------------\00", align 1
@.str.1 = private unnamed_addr constant [58 x i8] c"!!! Software Failure. Press left mouse button to continue\00", align 1
@.str.2 = private unnamed_addr constant [27 x i8] c"Guru Meditation: %s #%s:%d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_serverPanic(i8* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = call i32 (...) @bugReportStart()
  %8 = load i32, i32* @LL_WARNING, align 4
  %9 = call i32 (i32, i8*, ...) @serverLog(i32 %8, i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str, i64 0, i64 0))
  %10 = load i32, i32* @LL_WARNING, align 4
  %11 = call i32 (i32, i8*, ...) @serverLog(i32 %10, i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str.1, i64 0, i64 0))
  %12 = load i32, i32* @LL_WARNING, align 4
  %13 = load i8*, i8** %4, align 8
  %14 = load i8*, i8** %5, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i32 (i32, i8*, ...) @serverLog(i32 %12, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.2, i64 0, i64 0), i8* %13, i8* %14, i32 %15)
  %17 = load i32, i32* @LL_WARNING, align 4
  %18 = call i32 (i32, i8*, ...) @serverLog(i32 %17, i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str, i64 0, i64 0))
  store i8 120, i8* inttoptr (i64 -1 to i8*), align 1
  ret void
}

declare dso_local i32 @bugReportStart(...) #1

declare dso_local i32 @serverLog(i32, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
